# grpc-service-one

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/helloworld/: helloworld_pb2.py  helloworld_pb2_grpc.py
protos/: helloworld.proto
